updates to media query to resolve issue with contacts page on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,9 +356,9 @@ main {
 
     #contact {
         background: url(../images/statuecroptop.jpg) no-repeat center top/cover;
-        padding: 20px 10% 0 10%;
+        /*padding: 20px 10% 0 10%;
         flex-grow: 1;
-        position: relative;
+        position: relative;*/
     }
 
     /* Move form to center of page */
